--- a/templates/biobib/Publications.template
+++ b/templates/biobib/Publications.template
@@ -10,9 +10,10 @@
     \VAR{publication|make_row}
 \BLOCK{endif}
 \BLOCK{endfor}
-\\hline
-\\hline
-   &   & {\bf Since Appointment:} &    &   \\\\
+
+\hline
+ \multicolumn{5}{l}{\bf \cellcolor{yellow!25}Current Review Period Begins Here, July 15th 2019 to September 15th 2020}\\
+   \hline  
 \BLOCK{for publication in items}
 \BLOCK{if publication['New'] == 'Y'}
     \VAR{publication|make_row}
