--- a/templates/biobib/Courses.template
+++ b/templates/biobib/Courses.template
@@ -2,11 +2,11 @@
 % Created on \VAR{created}
 
 \begin{longtable}{lp{6.5cm}p{1cm}rrrp{2cm}}
-Qtr & Course & Class Type & Units & Hrs/Wk & Enrollment & ESCI/Written Evals Avail.\\
+Qtr & Course no., Title & New & Institution & Type & Units & Hrs/Wk & Enroll & Evals Avail. & Eval / (Dept Mean)\\
 \hline 
 \endhead 
 \BLOCK{ for course in courses }
-\VAR{course.QYR} & \VAR{course.Title} & \VAR{course['Class Type']} & \VAR{course.Units|tex_escape} & \VAR{course['Hours per Week']} & \VAR{ course.Enrollment} & \VAR{course.ESCI}/\VAR{course.Evals} \\ 
+\VAR{course.QYR} & \VAR{course.Title} & \VAR{course.New} & \VAR{course['course.Institution']} & \VAR{course['Class Type']} & \VAR{course.Units|tex_escape} & \VAR{course['Hours per Week']} & \VAR{ course.Enrollment} & \VAR{course.ESCI}/\VAR{course.Evals} \\ 
 \BLOCK{ endfor } 
 \end{longtable}
 
